--- a/css/main.css
+++ b/css/main.css
@@ -349,7 +349,7 @@ template {
   display: none;
 }
 
-.btn_extension, .section_hero_btn .btn_select, .section_about .cell_reward button {
+.btn_extension, .section_hero_btn .btn_select, .section_about .cell_reward button, .option_input button {
   border: none;
   border-radius: 50px;
   background-color: #3cb4ac;
@@ -362,7 +362,7 @@ template {
   transition: 150ms ease-in-out;
 }
 
-.btn_extension:hover, .section_hero_btn .btn_select:hover, .section_about .cell_reward button:hover {
+.btn_extension:hover, .section_hero_btn .btn_select:hover, .section_about .cell_reward button:hover, .option_input button:hover {
   cursor: pointer;
   background-color: #147b74;
 }
@@ -571,8 +571,8 @@ main > * {
   border-radius: 50px;
   padding-right: 2.5rem;
   cursor: pointer;
-  -webkit-transition: all 150ms ease-in-out;
-  transition: all 150ms ease-in-out;
+  -webkit-transition: all 250ms ease-in-out;
+  transition: all 250ms ease-in-out;
 }
 
 .section_hero_btn .btn_bookmark:hover {
@@ -952,53 +952,43 @@ main > * {
   margin-bottom: 28rem;
 }
 
-.modal_window h1 {
-  font-size: 1.8rem;
-  margin-bottom: 0;
+.modal_window .close_modal {
+  position: absolute;
+  top: 3.2rem;
+  right: 3.2rem;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
-.modal_window .modal_text {
-  font-size: 1.6rem;
-  line-height: 2.8rem;
-  color: #7a7a7a;
+.modal_window .close_modal .icon_close_modal:hover {
+  opacity: 1;
 }
 
-.modal_window h2 {
-  font-size: 1.6rem;
-  font-weight: 700;
-  margin: 0;
-}
-
-.modal_window .window_close {
+.modal_header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: normal;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
-.modal_window .window_close img:hover {
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
+.modal_header h1 {
+  font-size: 2.4rem;
+  margin-bottom: 0;
 }
 
-.modal_window .icon_close {
-  -webkit-transition: opacity 100ms ease-in-out;
-  transition: opacity 100ms ease-in-out;
-  cursor: pointer;
-}
-
-.modal_window .icon_close:hover {
-  opacity: 1;
+.modal_header p {
+  font-size: 1.5rem;
+  line-height: 2.8rem;
 }
 
 .options {
@@ -1040,53 +1030,64 @@ main > * {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  position: relative;
   border: 1px solid #d6d6d6;
   border-radius: 0.8rem;
-  padding: 2.8rem;
+  -webkit-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
-.options > * .option_rate {
-  font-size: 1.6rem;
-  font-weight: 500;
-  color: #3cb4ac;
+.options > *.active {
+  border: 2px solid #3cb4ac;
 }
 
-.options > * .option_check_cat {
-  font-size: 1.6rem;
-  font-weight: 700;
-  -webkit-transition: color 150ms ease-in-out;
-  transition: color 150ms ease-in-out;
-}
-
-.options > * .option_check_cat:hover {
-  color: #3cb4ac;
-}
-
-input[type="radio"] {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-}
-
-.option_header {
+.option_content_wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: normal;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  min-height: 15.7rem;
+  padding: 3.3rem 2.5rem;
+  position: relative;
 }
 
-.option_header .option_header_text {
+.option_content_wrapper .amount_left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.5rem;
+  position: absolute;
+  top: 3rem;
+  right: 2.5rem;
+  font-size: 1.8rem;
+  font-weight: 700;
+}
+
+.option_content_wrapper .amount_left p {
+  margin: 0;
+}
+
+.option_content_wrapper p {
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin-top: 1.1rem;
+  margin-bottom: 0;
+  margin-left: 4.5rem;
+}
+
+.trigger {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1100,66 +1101,129 @@ input[type="radio"] {
           align-items: center;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
-          justify-content: flex-start;
+          justify-content: start;
+  cursor: pointer;
 }
 
-.option_header .modal_amount_left {
+.trigger .option_content_header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  gap: 1rem;
+  gap: 2rem;
+}
+
+.trigger h2 {
+  font-size: 1.6rem;
+  font-weight: 700;
+  margin: 0;
+}
+
+.trigger .option_cat {
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #3cb4ac;
+}
+
+input[type="radio"] {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: #fff;
+  width: 2.4rem;
+  height: 2.4rem;
+  border: 1px solid #d6d6d6;
+  border-radius: 50%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+}
+
+input[type="radio"]::before {
+  content: "";
+  width: 12px;
+  height: 12px;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  background-color: #3cb4ac;
+  border-radius: 50%;
+  -webkit-transition: 150ms ease-in-out;
+  transition: 150ms ease-in-out;
+}
+
+input[type="radio"]:checked::before {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.option_input {
+  border-top: 1px solid #d6d6d6;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
-  font-size: 1.5rem;
-  color: #7a7a7a;
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
+  padding: 0 3rem;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
 }
 
-.option_header .modal_amount_left .amount_left {
-  font-size: 1.8rem;
+.option_input form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1.5rem;
+}
+
+.option_input button {
+  width: 10.7rem;
+  height: 4.7rem;
+}
+
+.option_input span {
+  width: 10rem;
+  height: 4.7rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid #d6d6d6;
+  border-radius: 50px;
+  font-size: 1.4rem;
   font-weight: 700;
-  color: black;
+  color: rgba(0, 0, 0, 0.3);
+  padding: 0 1rem;
 }
 
-@media screen and (max-width: 767px) {
-  .modal_window {
-    padding: 3rem 2.5rem;
-  }
-  .options p {
-    font-size: 1.4rem;
-    line-height: 2.4rem;
-    margin-bottom: 2.6rem;
-  }
-  .options > * {
-    padding: 2.5rem;
-  }
-  .option_free p {
-    margin-bottom: 0;
-  }
-  .option_header .option_header_text {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    gap: 1rem;
-  }
-  .option_header .option_header_text span {
-    font-size: 1.4rem;
-  }
-  .option_header .modal_amount_left {
-    position: absolute;
-    left: 2.5rem;
-    bottom: 1.8rem;
-  }
+.option_input span:hover {
+  border: 1px solid #3cb4ac;
+}
+
+.option_input span input {
+  border: none;
+  outline: none;
+  text-align: right;
+  font-size: 1.4rem;
+  font-weight: 700;
+  width: 50%;
+  caret-color: #3cb4ac;
+}
+
+.option_input.active {
+  visibility: visible;
+  height: 9.7rem;
 }
 /*# sourceMappingURL=main.css.map */
