--- a/css/main.css
+++ b/css/main.css
@@ -349,7 +349,7 @@ template {
   display: none;
 }
 
-.btn_extension, .section_hero_btn .btn_select, .section_about .cell_reward button, .option_input button {
+.btn_extension, .section_hero_btn .btn_select, .section_about .cell_reward button, .option_input .btn_form {
   border: none;
   border-radius: 50px;
   background-color: #3cb4ac;
@@ -362,7 +362,7 @@ template {
   transition: 150ms ease-in-out;
 }
 
-.btn_extension:hover, .section_hero_btn .btn_select:hover, .section_about .cell_reward button:hover, .option_input button:hover {
+.btn_extension:hover, .section_hero_btn .btn_select:hover, .section_about .cell_reward button:hover, .option_input .btn_form:hover {
   cursor: pointer;
   background-color: #147b74;
 }
@@ -950,6 +950,8 @@ main > * {
   padding: 4.8rem;
   margin-top: 19rem;
   margin-bottom: 28rem;
+  -webkit-transform: scale(0);
+          transform: scale(0);
 }
 
 .modal_window .close_modal {
@@ -962,6 +964,11 @@ main > * {
 
 .modal_window .close_modal .icon_close_modal:hover {
   opacity: 1;
+}
+
+.modal_bg.modal_active .modal_window {
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 .modal_header {
@@ -989,6 +996,7 @@ main > * {
 .modal_header p {
   font-size: 1.5rem;
   line-height: 2.8rem;
+  color: #7a7a7a;
 }
 
 .options {
@@ -1013,6 +1021,33 @@ main > * {
   color: #7a7a7a;
   font-size: 1.5rem;
   line-height: 2.8rem;
+}
+
+@media screen and (max-width: 767px) {
+  .modal_window {
+    padding: 3rem 2.5rem;
+  }
+  .modal_window .close_modal {
+    top: 4.4rem;
+    right: 2.5rem;
+  }
+  .modal_header {
+    gap: 2rem;
+  }
+  .modal_header h1 {
+    font-size: 1.8rem;
+  }
+  .modal_header p {
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+  }
+  .options {
+    margin-top: 2rem;
+  }
+  .options p {
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+  }
 }
 
 .options > * {
@@ -1080,7 +1115,6 @@ main > * {
 }
 
 .option_content_wrapper p {
-  font-size: 1.5rem;
   font-weight: 400;
   margin-top: 1.1rem;
   margin-bottom: 0;
@@ -1122,6 +1156,39 @@ main > * {
   font-size: 1.6rem;
   font-weight: 500;
   color: #3cb4ac;
+}
+
+@media screen and (max-width: 767px) {
+  .trigger {
+    cursor: pointer;
+  }
+  .trigger .option_content_header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 1rem;
+  }
+  .trigger h2 {
+    font-size: 1.4rem;
+  }
+  .trigger .option_cat {
+    font-size: 1.4rem;
+  }
+  .option_content_wrapper {
+    padding: 3.3rem 2.5rem;
+  }
+  .option_content_wrapper .amount_left {
+    position: static;
+  }
+  .option_content_wrapper .amount_left p {
+    margin: 0;
+  }
+  .option_content_wrapper p {
+    margin-top: 3.5rem;
+    margin-bottom: 3rem;
+    margin-left: 0;
+  }
 }
 
 input[type="radio"] {
@@ -1183,7 +1250,7 @@ input[type="radio"]:checked::before {
   gap: 1.5rem;
 }
 
-.option_input button {
+.option_input .btn_form {
   width: 10.7rem;
   height: 4.7rem;
 }
@@ -1225,5 +1292,53 @@ input[type="radio"]:checked::before {
 .option_input.active {
   visibility: visible;
   height: 9.7rem;
+}
+
+@media screen and (max-width: 767px) {
+  .option_input {
+    padding: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    gap: 2rem;
+  }
+  .option_input form {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .option_input p {
+    margin: 0;
+  }
+  .option_input.active {
+    height: 14rem;
+    padding: 2.5rem 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .option_input form {
+    gap: 0.5rem;
+  }
+}
+
+.modal_thanks {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 45rem;
+  height: 54rem;
+  background-color: white;
 }
 /*# sourceMappingURL=main.css.map */
