--- a/css/main.scss
+++ b/css/main.scss
@@ -414,7 +414,7 @@ main {
   padding: 4.8rem;
   margin-top: 19rem;
   margin-bottom: 28rem;
-
+  transform: scale(0);
   .close_modal {
     position: absolute;
     top: 3.2rem;
@@ -427,6 +427,11 @@ main {
   }
 }
 
+.modal_bg.modal_active .modal_window {
+  transform: scale(1);
+}
+
+
 .modal_header {
   @include flex(column, normal, flex-start, flex-start);
   h1 {
@@ -436,8 +441,12 @@ main {
     p {
       font-size: 1.5rem;
       line-height: 2.8rem;
+      color: hsl(0, 0, 48);
     }
 }
+
+
+
 
 .options {
   margin-top: 4rem;
@@ -446,6 +455,35 @@ main {
     color: hsl(0, 0, 48);
     font-size: 1.5rem;
     line-height: 2.8rem;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .modal_window {
+    padding: 3rem 2.5rem;
+    .close_modal {
+      top: 4.4rem;
+      right:2.5rem;
+    }
+  }
+
+  .modal_header {
+    gap: 2rem;
+    h1 {
+      font-size: 1.8rem;
+    }
+    p {
+        font-size: 1.4rem;
+        line-height: 2.4rem;
+    }
+  }
+
+  .options {
+    margin-top: 2rem;
+    p {
+      font-size: 1.4rem;
+      line-height: 2.4rem;
+    }
   }
 }
 
@@ -479,7 +517,6 @@ main {
     }
   }
   p {
-    font-size: 1.5rem;
     font-weight: 400;
     margin-top: 1.1rem;
     margin-bottom: 0;
@@ -494,6 +531,7 @@ main {
     display: flex;
     gap: 2rem;
   }
+
   h2 {
     font-size: 1.6rem;
     font-weight: 700;
@@ -505,6 +543,41 @@ main {
     color: $primary-moderate;
   }
 }
+
+@media screen and (max-width: 767px) {
+
+  .trigger {
+    cursor: pointer;
+    .option_content_header {
+      flex-direction: column;
+      gap: 1rem;
+    }
+  
+    h2 {
+      font-size: 1.4rem;
+    }
+    .option_cat {
+      font-size: 1.4rem;
+    }
+  }
+
+  .option_content_wrapper {
+    padding: 3.3rem 2.5rem;
+    .amount_left {
+      position: static;
+      p {
+        margin: 0;
+      }
+    }
+
+    p {
+      margin-top: 3.5rem;
+      margin-bottom: 3rem;
+      margin-left: 0;
+    } 
+  }
+}
+
 
 input[type="radio"] {
   appearance: none;
@@ -547,7 +620,7 @@ input[type="radio"]:checked::before {
     display: flex;
     gap: 1.5rem;
   }
-  button {
+  .btn_form {
     @extend .btn_extension;
     width: 10.7rem;
     height: 4.7rem;
@@ -584,6 +657,46 @@ input[type="radio"]:checked::before {
   height: 9.7rem;
 }
 
+@media screen and (max-width: 767px) {
+  .option_input {
+    padding: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content:flex-end;
+    gap:2rem;
+    form {
+      justify-content: space-between;
+    }
+    p {
+      margin: 0;
+    }
+  }
+
+  .option_input.active {
+    height: 14rem;
+    padding: 2.5rem 0;
+  }
+
+}
+
+@media screen and (max-width: 320px) {
+  .option_input {
+    form {
+      gap: 0.5rem;
+    }
+  }
+}
+
+
+.modal_thanks {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+  flex-direction: column;
+  width: 45rem;
+  height: 54rem;
+  background-color: hsl(0, 0, 100);
+}
 
 
 
