--- a/css/main.css
+++ b/css/main.css
@@ -349,7 +349,7 @@ template {
   display: none;
 }
 
-.btn_extension, .section_hero_btn .btn_select, .section_about .cell_reward button, .option_input .btn_form {
+.btn_extension, .section_hero_btn .btn_select, .section_about .cell_reward button, .modal_thanks_btn, .option_input .btn_form {
   border: none;
   border-radius: 50px;
   background-color: #3cb4ac;
@@ -362,7 +362,7 @@ template {
   transition: 150ms ease-in-out;
 }
 
-.btn_extension:hover, .section_hero_btn .btn_select:hover, .section_about .cell_reward button:hover, .option_input .btn_form:hover {
+.btn_extension:hover, .section_hero_btn .btn_select:hover, .section_about .cell_reward button:hover, .modal_thanks_btn:hover, .option_input .btn_form:hover {
   cursor: pointer;
   background-color: #147b74;
 }
@@ -937,11 +937,6 @@ main > * {
   transition: all 250ms ease-in-out;
 }
 
-.modal_active {
-  opacity: 1;
-  visibility: visible;
-}
-
 .modal_window {
   position: relative;
   background-color: white;
@@ -950,8 +945,6 @@ main > * {
   padding: 4.8rem;
   margin-top: 19rem;
   margin-bottom: 28rem;
-  -webkit-transform: scale(0);
-          transform: scale(0);
 }
 
 .modal_window .close_modal {
@@ -964,11 +957,6 @@ main > * {
 
 .modal_window .close_modal .icon_close_modal:hover {
   opacity: 1;
-}
-
-.modal_bg.modal_active .modal_window {
-  -webkit-transform: scale(1);
-          transform: scale(1);
 }
 
 .modal_header {
@@ -997,6 +985,72 @@ main > * {
   font-size: 1.5rem;
   line-height: 2.8rem;
   color: #7a7a7a;
+}
+
+.modal_active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal_thanks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  flex-direction: column;
+  padding: 4.8rem;
+  width: calc(min(54rem, 87%));
+  height: 45rem;
+  background-color: white;
+  border-radius: 0.8rem;
+}
+
+.modal_thanks h1 {
+  font-size: 2.4rem;
+}
+
+.modal_thanks p {
+  font-size: 1.6rem;
+  line-height: 3rem;
+  color: #7a7a7a;
+  text-align: center;
+  margin-bottom: 2.5rem;
+}
+
+.modal_thanks .icon_check {
+  margin-bottom: 3.4rem;
+}
+
+.modal_thanks_btn {
+  width: 10.7rem;
+  height: 4.8rem;
+}
+
+@media screen and (max-width: 767px) {
+  .modal_thanks {
+    padding: 3rem 2.5rem;
+    width: calc(min(54rem, 87%));
+    height: 38.2rem;
+  }
+  .modal_thanks .icon_check {
+    margin-bottom: 1.5rem;
+  }
+  .modal_thanks h1 {
+    font-size: 1.8rem;
+  }
+  .modal_thanks p {
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+    margin-bottom: 3.5rem;
+  }
 }
 
 .options {
@@ -1327,18 +1381,5 @@ input[type="radio"]:checked::before {
   .option_input form {
     gap: 0.5rem;
   }
-}
-
-.modal_thanks {
-  display: none;
-  visibility: hidden;
-  opacity: 0;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 45rem;
-  height: 54rem;
-  background-color: white;
 }
 /*# sourceMappingURL=main.css.map */
