--- a/css/main.scss
+++ b/css/main.scss
@@ -401,10 +401,7 @@ main {
   transition: all 250ms ease-in-out;
 }
 
-.modal_active {
-  opacity: 1;
-  visibility: visible;
-}
+
 
 .modal_window {
   position: relative;
@@ -414,7 +411,6 @@ main {
   padding: 4.8rem;
   margin-top: 19rem;
   margin-bottom: 28rem;
-  transform: scale(0);
   .close_modal {
     position: absolute;
     top: 3.2rem;
@@ -426,11 +422,6 @@ main {
     }
   }
 }
-
-.modal_bg.modal_active .modal_window {
-  transform: scale(1);
-}
-
 
 .modal_header {
   @include flex(column, normal, flex-start, flex-start);
@@ -446,7 +437,62 @@ main {
 }
 
 
+.modal_active {
+  opacity: 1;
+  visibility: visible;
+}
 
+.modal_thanks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+  flex-direction: column;
+  padding: 4.8rem;
+  width: calc(min(54rem, 87%));
+  height: 45rem;
+  background-color: hsl(0, 0, 100);
+  border-radius: 0.8rem;
+  h1 {
+    font-size: 2.4rem;
+  }
+  p{
+    font-size: 1.6rem;
+    line-height: 3rem;
+    color: hsl(0, 0, 48);
+    text-align:center;
+    margin-bottom: 2.5rem;
+  }
+
+  .icon_check {
+    margin-bottom: 3.4rem;
+  }
+}
+
+.modal_thanks_btn {
+  @extend .btn_extension;
+  width: 10.7rem;
+  height: 4.8rem;
+}
+
+@media screen and (max-width: 767px) {
+  .modal_thanks {
+    padding: 3rem 2.5rem;
+    width: calc(min(54rem, 87%));
+    height: 38.2rem;
+    .icon_check {
+      margin-bottom: 1.5rem;
+    }
+    h1 {
+      font-size: 1.8rem;
+    }
+    p {
+      font-size: 1.4rem;
+      line-height: 2.4rem;
+      margin-bottom: 3.5rem;
+    }
+  }
+}
 
 .options {
   margin-top: 4rem;
@@ -688,15 +734,8 @@ input[type="radio"]:checked::before {
 }
 
 
-.modal_thanks {
-  display: none;
-  visibility: hidden;
-  opacity: 0;
-  flex-direction: column;
-  width: 45rem;
-  height: 54rem;
-  background-color: hsl(0, 0, 100);
-}
+
+
 
 
 
